# family-computer

./: .gitignore  Cargo.toml  LICENSE.md  Makefile.toml  codesign-release.sh
.github/workflows/: release.yaml
src/: bus.rs  bus_interceptor.rs  controller.rs  cpu.rs  dma.rs  emulator.rs  ines_rom.rs  instructions.rs  machine.rs  main.rs  memory.rs  memory_map.rs  nes.rs  operand.rs  palette.rs  ppu.rs  rw_handle.rs
src/apu/: apu.rs  apu_synth.rs  channel.rs  channel_state.rs  channels.rs  envelope.rs  length_counter.rs  linear_counter.rs  mod.rs  noise.rs  pulse.rs  registers.rs  sequencer.rs  sweep.rs  timing.rs  triangle.rs
src/audio/: audio_channel.rs  mod.rs  oscillator.rs  stream_setup.rs  synth.rs
src/bus/: bus.rs  bus_interceptor.rs  mod.rs  rw_handle.rs
src/cartridge/: bus_interceptor.rs  cnrom.rs  mmc1.rs  mmc3.rs  mod.rs  nrom.rs  uxrom.rs
src/cpu/: cpu.rs  cpu_bus.rs  disassembly.rs  instructions.rs  mod.rs  operand.rs
src/gfx/: crt_screen.rs  crt_screen.wgsl  gfx_state.rs  label.rs  layout.rs  mod.rs  node.rs  text_controller.rs  vertex.rs  vertex2d.rs
src/gui/: crt_screen.rs  emulator_ui.rs  keys.rs  mod.rs  run_emulator.rs
src/nes/: controller.rs  dma.rs  ines_rom.rs  mod.rs  nes.rs
src/ppu/: bus.rs  drawing.rs  mod.rs  pixbuf.rs  ppu.rs  ppu_cpu_bus.rs  ppu_memory.rs  registers.rs  scrolling.rs  sprites.rs
