[package]
edition = "2021"
name = "family-computer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield-struct = "0.5.6"
bytemuck = "1.14.0"
crossbeam-channel = "0.5.10"
dyn-clone = "1.0.16"
iced = {version = "0.10.0", features = ["smol", "advanced", "image"]}
smol = "2.0.0"
strum = {version = "0.25.0", features = ["derive"]}

[dev-dependencies]
similar-asserts = "1.5.0"

[profile.release]
debug = true
