[package]
description = "An NES emulator"
edition = "2021"
name = "family-computer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
bitfield-struct = "0.5.6"
bytemuck = "1.14.0"
cpal = "0.15.2"
dyn-clone = "1.0.16"
fastapprox = "0.3.1"
iced = {version = "0.10.0", features = ["smol", "advanced", "image"]}
native-dialog = "0.7.0"
smol = "1.3.0"
strum = {version = "0.25.0", features = ["derive"]}

[dev-dependencies]
similar-asserts = "1.5.0"

[profile.release]
# lto = true

[package.metadata.bundle]
identifier = "com.natbudin.family-computer"
name = "Family Computer"
